The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project **does not adhere to [Semantic Versioning](http://semver.org/spec/v2.0.0.html)**.

## [Unreleased]

### Added

* IS_TMP_1777: check LXC containers too

### Changed

### Deprecated

### Removed

### Fixed

## [24.09] 2024-09-06

### Changed

* Merge CONTRIBUTING files in README
* Move LICENSE file at the root of the repo
* IS_LXC_PHP_BAD_DEBIAN_VERSION: Trixie support
* IS_PHPEVOLINUXCONF: Trixie support
* IS_SSHALLOWUSERS: Trixie support

### Removed

* IS_EVOLIX_GROUP: too many false positive

### Fixed

* IS_LXC_PHP_FPM_SERVICE_UMASK_SET: suffixed container name support

## [24.08] 2024-08-01

### Fixed

* VERSION variable must contain valid characters only

## [24.07] 2024-07-18

### Added

* IS_EVOLIX_GROUP: new check to verify that all Evolix users are in "evolix" group

### Changed

* IS_SYSLOGCONF: modern and legacy tests
* IS_MYSQLNRPE: ajust check for monitoringctl new nagios conf

### Deprecated

### Removed

### Fixed

* Fix errors in some LXC checks: list only active LXC containers, add conditions to filter containers that are not in evo-standards.
* IS_SSHALLOWUSERS: fix unwanted sterr when /etc/ssh/sshd_condig.d does not exist.
* IS_PURGE_FAIL2BAN: Fix bad name, rename to IS_FAIL2BAN_PURGE.
* IS_SYSLOGCONF: better detection


## [24.01] 2024-01-03

### Added

* IS_BACKPORTS_VERSION: check if the Backports release matches the Debian release

### Changed

* IS_BROADCOMFIRMWARE: use apt policy
* Prefer long options
* IS_POSTFIX_MYDESTINATION: use fixed string instead of escaping characters

### Fixed

* IS_EVOBACKUP_EXCLUDE_MOUNT: correctly treat old versions of evobackup
* IS_DEBIANSECURITY_LXC: don’t test older than Debian 9 containers
* IS_KERNELUPTODATE: address false positive in case of kernel removal
* IS_SSHPERMITROOTNO: specify lport, avoiding failure if sshd listens to more than one port
* IS_DRBDTWOPRIMARIES: fix false positive (#151)